# common_sense_for_robots

./: .gitignore  README.md  action_pattern_ontology_creation.py  action_patterns_example.json  action_patterns_ground_truth.json  pkgInfo.py  prompts.py  pyproject.toml
