[tool.poetry]
name = "common-sense-for-robots"
version = "0.1.0"
description = ""
authors = ["Felix Ocker <felix.ocker@honda-ri.de>"]
readme = "README.md"
packages = [{include = "common_sense_for_robots"}]

[tool.poetry.dependencies]
python = "^3.8"
owlready2 = "^0.44"
black = "^23.9.1"
ruff = "^0.0.289"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
